# FastAPIReactTemplate

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml  main.py
backend/: .secrets.baseline  Dockerfile  pyproject.toml  pytest.ini  testTEMPNAME.db
backend/app/: backend_pre_start.py  initial_data.py  main.py  models.py
backend/app/api/: deps.py  main.py  utils.py
backend/app/api/login/: routes.py  service.py
backend/app/api/notes/: routes.py  service.py
backend/app/api/users/: routes.py  service.py
backend/app/core/: config.py  db.py  security.py
backend/scripts/: prestart.sh
backend/tests/: README.md  conftest.py
backend/tests/api/notes/: test_routes.py  test_service.py
backend/tests/api/users/: test_routes.py
backend/tests/core/: test_db.py  test_security.py
backend/tests/utils/: db_utils.py
frontend/: index.html  openapi.json  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  declarations.d.ts  index.css  utils.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/auth/: RecoverPassword.tsx
frontend/src/components/home/: Footer.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/tables/: UserTable.tsx
frontend/src/components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/ui/: badge.tsx  (+2 more)
frontend/src/hooks/: use-auth.ts  use-history.ts  use-is-loggedin.ts  use-mutation-to-promise.ts
frontend/src/mutations/: users.ts
frontend/src/pages/: Index.tsx
frontend/src/queries/: users.ts
(+8 files in other folders)
